libecs/tests/Core/Scripting/tests/invalid/variable/invalid_variable.pvt
system Physics {Position, Velocity, Acceleration}
    newVel = Velocity + Acceleration
    # Variable initialization needs typing